--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "fernando",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.3"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "mongoose": "^8.2.0"
   }
 }
