--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "fernando",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "jwt-simple": "^0.5.6",
     "mongoose": "^8.2.0"
   },
   "devDependencies": {
